IMTA-17741: Bump application insights, bump sonar analysis source version